--- a/server/package.json
+++ b/server/package.json
@@ -12,9 +12,12 @@
   "dependencies": {
     "apollo-server-express": "^1.3.2",
     "body-parser": "^1.18.2",
+    "dataloader": "^1.4.0",
     "express": "^4.16.2",
     "graphql": "^0.12.3",
+    "graphql-subscriptions": "^1.1.0",
     "graphql-tools": "^2.18.0",
-    "mongodb": "^3.3.0"
+    "mongodb": "^3.3.0",
+    "subscriptions-transport-ws": "^0.9.16"
   }
 }
